...
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Reverse_words" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text to reverse" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2Pc-Ra-iDY" userLabel="To Reverse Text Field">
                                <rect key="frame" x="16" y="141" width="358" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="GJ9-hQ-9Do"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                <textInputTraits key="textInputTraits"/>
...
                            <constraint firstItem="2Pc-Ra-iDY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="t9i-At-9Gk"/>
                            <constraint firstItem="rla-5l-7su" firstAttribute="top" secondItem="jQl-vg-Bdf" secondAttribute="bottom" constant="20" id="wHT-5E-qWY"/>
                            <constraint firstItem="2Pc-Ra-iDY" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="xMb-bT-N76"/>
                            <constraint firstItem="Apy-GW-hOB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="yj8-mi-UPj"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Reverse Words" id="xh6-BG-kXG"/>
                    <connections>
                        <outlet property="defaultExcludeLabel" destination="rla-5l-7su" id="Lft-Kl-HcJ"/>
                        <outlet property="defaultToCustomToggle" destination="jQl-vg-Bdf" id="kfh-9O-6Nw"/>
                        <outlet property="reversedTextLabel" destination="Apy-GW-hOB" id="fd6-Rd-aQs"/>
                        <outlet property="textToIgnoreField" destination="sfm-Wc-4DU" id="Z19-As-ORr"/>
                        <outlet property="toReverseTextField" destination="2Pc-Ra-iDY" id="Sb0-vy-4QR"/>
...
